Redesign the Tutorials' section (#108)
* Redesign the Tutorials' section

* Update modules/ROOT/pages/appendix/tutorials/tutorials-overview.adoc

Co-authored-by: David Oliver <davidoliverSP2@users.noreply.github.com>

* Update modules/ROOT/pages/appendix/tutorials/tutorials-overview.adoc

Co-authored-by: David Oliver <davidoliverSP2@users.noreply.github.com>

* Update modules/ROOT/pages/appendix/tutorials/tutorials-overview.adoc

Co-authored-by: David Oliver <davidoliverSP2@users.noreply.github.com>

Co-authored-by: David Oliver <davidoliverSP2@users.noreply.github.com>

--- a/modules/ROOT/content-nav.adoc
+++ b/modules/ROOT/content-nav.adoc
@@ -47,9 +47,11 @@
 ** xref:appendix/graphdb-concepts/index.adoc[]
 *** xref:appendix/graphdb-concepts/graphdb-vs-rdbms.adoc[]
 *** xref:appendix/graphdb-concepts/graphdb-vs-nosql.adoc[]
-** xref:appendix/guide-cypher-basics.adoc[]
-** xref:appendix/guide-build-a-recommendation-engine.adoc[]
-** xref:appendix/guide-import-relational-and-etl.adoc[]
-** xref:appendix/guide-import-desktop-csv.adoc[]
 ** xref:appendix/example-data.adoc[]
 ** xref:appendix/getting-started-resources.adoc[]
+** xref:appendix/tutorials/tutorials-overview.adoc[]
+*** xref:appendix/tutorials/guide-cypher-basics.adoc[]
+*** xref:appendix/tutorials/guide-build-a-recommendation-engine.adoc[]
+*** xref:appendix/tutorials/guide-import-relational-and-etl.adoc[]
+*** xref:appendix/tutorials/guide-import-desktop-csv.adoc[]
+
