--- a/modules/ROOT/pages/appendix/getting-started-resources.adoc
+++ b/modules/ROOT/pages/appendix/getting-started-resources.adoc
@@ -9,6 +9,7 @@ To help you along your path of learning more about Neo4j, we want to provide you
 
 [#graphdb-resources]
 == Graph database concepts
+* https://www.youtube.com/playlist?list=PL9Hl4pk2FsvWn1M0HMOta_9YpN930Ai8R[Video Series: Under the Hood]
 * https://www.youtube.com/watch?v=5Tl8WcaqZoc&list=PL9Hl4pk2FsvWM9GWaguRhlCQ-pa-ERd4U[Video Series: Intro to Graph Databases^]
 * https://neo4j.com/graph-databases-book/[Free eBook: O'Reilly Graph Databases^]
 * https://dzone.com/articles/graph-databases-for-beginners-native-vs-non-native[DZone: Graph Databases for Beginners^]
