--- a/modules/ROOT/pages/appendix/graphdb-concepts/graphdb-vs-nosql.adoc
+++ b/modules/ROOT/pages/appendix/graphdb-concepts/graphdb-vs-nosql.adoc
@@ -1,6 +1,6 @@
 
 [[graphdb-vs-nosql]]
-= Concepts: NoSQL to Graph
+= Transition from NoSQL to graph database
 
 :tags: get-started, introduction, nosql, graph, key-value, document, compare, concepts
 :description: This chapter explains how graph databases are related to other NoSQL databases and how they differ.
