--- a/modules/ROOT/pages/appendix/graphdb-concepts/index.adoc
+++ b/modules/ROOT/pages/appendix/graphdb-concepts/index.adoc
@@ -183,7 +183,7 @@ A relationship must have exactly one relationship type.
 
 Below is an `ACTED_IN` relationship, with the `Tom Hanks` node as the _source node_ and `Forrest Gump` as the _target node_.
 
-.Relationsip type.
+.Relationship type.
 =====
 image::graphdb-nodes-and-rel.svg[role="middle"]
 
@@ -317,7 +317,7 @@ The following naming conventions are recommended:
 [options="header"]
 |===
 | Graph entity      | Recommended style                                       | Example
-| Node label        | Camel case, beginning with an upper-case character      | `:VehicleOwner` rather than `:vehice_owner`
+| Node label        | Camel case, beginning with an upper-case character      | `:VehicleOwner` rather than `:vehicle_owner`
 | Relationship type | Upper case, using underscore to separate words          | `:OWNS_VEHICLE` rather than `:ownsVehicle`
 | Property          | Lower camel case, beginning with a lower-case character | `firstName` rather than `first_name`
 |===
