--- a/modules/ROOT/pages/cypher-intro/index.adoc
+++ b/modules/ROOT/pages/cypher-intro/index.adoc
@@ -1,23 +1,27 @@
-:description: A high-level overview of the graph query language Cypher.
 
 [[cypher-intro]]
 = Introduction to Cypher
- 
-This section introduces you to the graph query language Cypher.
-It will help you start thinking about graphs and patterns, apply this knowledge to simple problems, and learn how to write Cypher statements.
+:description: A high-level overview of the graph query language Cypher.
+
+This section introduces you to the graph query language -- Cypher.
+It aims to help you start thinking about graphs and patterns, apply this knowledge to simple problems, and learn how to write Cypher statements.
  
 [TIP]
 ====
-For the full reference of Cypher, see the xref:4.4@cypher-manual:ROOT:index.adoc#cypher-manual[Cypher documentation].
+For the full reference of Cypher, see the link:https://neo4j.com/docs/cypher-manual/current/[Cypher documentation]. +
+You can visit link:https://neo4j.com/product/cypher-graph-query-language/[Cypher page] to get an overview of Neo4j graph query language.
 ====
 
-= Cypher query language
+== Cypher query language
 
 [#about-cypher]
 Cypher is Neo4j's graph query language that lets you retrieve data from the graph.
-It is like SQL for graphs, and was inspired by SQL so it lets you focus on what data you want out of the graph (not how to go get it).  It is the easiest graph language to learn by far because of its similarity to other languages and intuitiveness.
+It is like SQL for graphs, and was inspired by SQL so it lets you focus on what data you want out of the graph (not how to go get it).
+It is the easiest graph language to learn by far because of its similarity to other languages and intuitiveness.
 
-image::cypher_learning.png[role="popup-link"]
+// image::cypher_learning.png[role="popup-link"]
+
+image::cypher_learning_arr.svg[role="popup-link"]
 
 // Note $$->$$ is used as a special escape to prevent asciidoc from replacing -> with arrow in unicode
 Cypher is unique because it provides a visual way of matching patterns and relationships.
@@ -32,9 +36,9 @@ delete (CRUD) on their graph, and Cypher is the primary interface for Neo4j.
 Like Neo4j itself, Cypher is open source!  link:http://openCypher.org[The openCypher project^] provides all of the specs needed.
 Cypher is backed by a number of companies all of which benefit from cypher.
 
-Once you have an AuraDB database, you can use the `:play cypher` command inside of Neo4j Browser to get started.
+Once you have an AuraDB database, you can use the `:guide cypher` command inside of Neo4j Browser to get started.
 
-Getting Started manual covers the basics of the language, which you can explore by topic area below, starting with basic material, and building up towards more complex material.
+Getting Started Guide covers the basics of the language, which you can explore topic by topic, starting with basic material and building up towards more complex material.
 
 ////
 In this section you are going to find the following subsections:
@@ -66,16 +70,13 @@ In this section you are going to find the following subsections:
 ////
 
 
-= Getting started with Cypher
-
-:tags: cypher, queries, graph-queries, syntax, patterns, keywords, aliases
-:description: This guide explains the basic concepts of Cypher, Neo4j's graph query language.
+== Getting started with Cypher
 
 [#why-cypher]
-== Why Cypher?
+=== Why Cypher?
 
 We already know that Neo4j's property graph model is composed of nodes and relationships, which may also have properties associated with them.
-However, nodes and relationships are the simple components that build the most valuable and powerful piece of the property graph model - the pattern.
+However, nodes and relationships are the simple components that build the most valuable and powerful piece of the property graph model -- the pattern.
 Patterns are comprised of node and relationship elements and can express simple or complex traversals and paths.
 
 Pattern recognition is fundamental to the way that the brain works.
@@ -86,11 +87,11 @@ Cypher is also heavily based on patterns and is designed to recognize various ve
 == Cypher syntax
 
 The video below walks through some background on Cypher, basic syntax, and some intermediate examples.
-The concepts in the video are discussed in the paragraphs below, as well as in upcoming chapters.
+The concepts in the video are discussed in the following paragraphs, as well as in upcoming chapters.
 
 ++++
 <div class="responsive-embed">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/l76udM3wB4U" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_dup3YOZSm8" title="What is Cypher?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 ++++
 
@@ -99,12 +100,13 @@ For example, take a look at the simple graph data in the image below.
 How would you represent this data in English? +
 _NOTE: the answer is in the paragraph below._
 
-image::cypher_graph_v1.png[role="popup-link"]
+// image::cypher_graph_v1.png[role="popup-link"]
 
+image::cypher_graph_v1_arr.svg[role="popup-link"]
 
-[TIP]
+[NOTE]
 --
-Jennifer likes Graphs. Jennifer is friends with Michael. Jennifer works for Neo4j.
+Sally likes Graphs. Sally is friends with John. Sally works for Neo4j.
 --
 
 Cypher syntax builds upon this English-language structure we just created.
@@ -112,40 +114,42 @@ Further you can find information on how to write this example in Cypher.
 
 === Cypher comments
 
-As you work through this section, you will see comments in the Cypher code to help explain the syntax or what a query is doing.
+As you work through this section, you see comments in the Cypher code to help explain the syntax or what a query is doing.
 Comments in Cypher are the same as in many programming languages.
 You can add comments by starting a line with `//` and putting text after the slashes.
 Just like in other languages, starting the line with two forward slashes means that anything on that line will become a comment.
 
 [TIP]
 --
-This is especially helpful to use in Neo4j Browser when saving queries.
-If you add a comment before the query, the comment automatically becomes the name of the saved query!
+This is especially helpful to use in Neo4j Browser when link:https://neo4j.com/docs/browser-manual/current/visual-tour/#favorites[saving queries].
+If you add a comment before the query, the comment automatically becomes the title of the saved query!
 --
 
 [#cypher-nodes]
-== Representing nodes in Cypher
+=== Representing nodes in Cypher
 
 Since Cypher is inspired by ASCII-Art for patterns, we need a visual way to represent each component of our pattern above.
 We know that the main components of the property graph model are nodes and relationships.
 Remember that nodes are the data entities in your graph and that you can often identify nodes by finding the nouns or objects in your data model.
-In our example, `Jennifer`, `Michael`, `Graphs`, and `Neo4j` are our nodes.
+In our example, `Sally`, `John`, `Graphs`, and `Neo4j` are our nodes.
 
-image::cypher_graph_nodes.png[role="popup-link"]
+// image::cypher_graph_nodes.png[role="popup-link"]
+
+image::cypher_graph_nodes_arr.svg[width=600, role="popup-link"]
 
 To depict nodes in Cypher, we surround the node with parentheses, e.g. `(node)`.
 Notice how the parentheses look similar to the circles that the visual representation uses for nodes in our data model.
 
-=== Node variables
+==== Node variables
 
 If we later want to refer to the node, we can give it a variable like `(p)` for person or `(t)` for thing.
 In real-world queries, we might use longer, more expressive variable names like `(person)` or `(thing)`.
 Just like in programming language variables, you can name your variables what you want and reference them by that same name later in a query.
 
 If the node is not relevant to your return results, you can specify an anonymous node using empty parentheses `()`.
-This means that you will not be able to return this node later in the query.
+This means that you are not be able to return this node later in the query.
 
-=== Node labels
+==== Node labels
 
 If you remember from the property graph data model, you can also group similar nodes together by assigning a node label.
 Labels are kind of like tags and allow you to specify certain types of entities to look for or create.
@@ -156,13 +160,13 @@ Just like to tell SQL to query a person's information from a `Person` or `Employ
 This helps Cypher distinguish between entities and optimize execution for your queries.
 It is always better to use node labels in your queries, where possible.
 
-[NOTE]
+[TIP]
 --
 If you do not specify a label for Cypher to filter out non-matching node categories, the query checks all of the nodes in the database!
 As you can imagine, this would be cumbersome if you had a very large graph.
 --
 
-=== Example: nodes in Cypher
+==== Example: nodes in Cypher
 
 Using our graph example above, let's see how we could specify our nodes.
 
@@ -175,7 +179,7 @@ Using our graph example above, let's see how we could specify our nodes.
 ----
 
 [#cypher-relationships]
-== Representing relationships in Cypher
+=== Representing relationships in Cypher
 
 To fully utilize the power of a graph database, we also need to express the relationships between our nodes.
 Relationships are represented in Cypher using an arrow `+-->+` or `+<--+` between two nodes.
@@ -184,7 +188,9 @@ Additional information, such as how nodes are connected (relationship type) and 
 
 In our example, the lines with `LIKES`, `IS_FRIENDS_WITH`, and `WORKS_FOR` between nodes are our relationships.
 
-image::cypher_graph_rels.png[role="popup-link"]
+// image::cypher_graph_rels.png[role="popup-link"]
+
+image::cypher_graph_rels_arr.svg[width=750, role="popup-link"]
 
 Undirected relationships are represented with no arrow and just two dashes `+--+`.
 This means that the relationship can be traversed in either direction.
@@ -209,7 +215,7 @@ MATCH (p:Person)-[:LIKES]-(t:Technology)
 ----
 --
 
-=== Relationship types
+==== Relationship types
 
 Relationship types categorize and add meaning to a relationship, similar to how labels group nodes.
 In our property graph data model, relationships show how nodes are connected and related to each other.
@@ -220,11 +226,11 @@ Poor relationship type names make it more difficult to both read and write Cyphe
 
 For example, let us look at the relationship types from our example graph.
 
-* `[:LIKES]` - makes sense when we put nodes on either side of the relationship (Jennifer LIKES Graphs)
-* `[:IS_FRIENDS_WITH]` - makes sense when we put nodes with it (Jennifer IS_FRIENDS_WITH Michael)
-* `[:WORKS_FOR]` - makes sense with nodes (Jennifer WORKS_FOR Neo4j)
+* `[:LIKES]` - makes sense when we put nodes on either side of the relationship (Sally LIKES Graphs)
+* `[:IS_FRIENDS_WITH]` - makes sense when we put nodes with it (Sally IS_FRIENDS_WITH John)
+* `[:WORKS_FOR]` - makes sense with nodes (Sally WORKS_FOR Neo4j)
 
-=== Relationship variables
+==== Relationship variables
 
 Just as we did with nodes, if we want to refer to a relationship later in a query, we can give it a variable like `[r]` or `[rel]`.
 We can also use longer, more expressive variable names like `[likes]` or `[knows]`.
@@ -239,7 +245,7 @@ Since no relationship type declared, Cypher searches all types of relationships.
 --
 
 [#cypher-properties]
-== Node or relationship properties
+=== Node or relationship properties
 
 We have talked about how to write Cypher for nodes, relationships, and labels.
 The last piece of our property graph data model is for properties.
@@ -249,30 +255,32 @@ To represent these in Cypher, we can use curly braces within the parentheses of 
 The name and value of the property then go inside the curly braces.
 Our example graph has both a node property (`name`) and a relationship property (`since`).
 
-* Node property: `(p:Person {name: 'Jennifer'})`
+* Node property: `(p:Person {name: 'Sally'})`
 * Relationship property: `+-[rel:IS_FRIENDS_WITH {since: 2018}]->+`
 
-image::cypher_graph_props.png[role="popup-link"]
+// image::cypher_graph_props.png[role="popup-link"]
+
+image::cypher_graph_props_arr.svg[role="popup-link"]
 
 Properties can have values with a variety of data types.
 To see the full list that Cypher offers, see the manual section on link:https://neo4j.com/docs/cypher-manual/current/syntax/values/[values and types^].
 
 [#cypher-patterns]
-== Patterns in Cypher
+=== Patterns in Cypher
 
 Nodes and relationships make up the building blocks for graph patterns.
 These building blocks can come together to express simple or complex patterns.
 Patterns are the most powerful capability of graphs.
 In Cypher, they can be written as a continuous path or separated into smaller patterns and tied together with commas.
 
-To show a pattern in Cypher, we need to combine the node and relationship syntaxes we have learned so far.
-Let us use our example of `Jennifer likes Graphs`.
+To show a pattern in Cypher, you need to combine the node and relationship syntaxes you have learned so far.
+Let's use the example of `Sally likes Graphs`.
 
 In Cypher, this pattern would look like the code below.
 
 [source, cypher]
 ----
-(p:Person {name: "Jennifer"})-[rel:LIKES]->(g:Technology {type: "Graphs"})
+(p:Person {name: "Sally"})-[rel:LIKES]->(g:Technology {type: "Graphs"})
 ----
 
 This bit of Cypher tells the pattern we want, but it does not tell whether we want to find that existing pattern or insert it as a new pattern.
@@ -281,7 +289,7 @@ To tell Cypher what we want it to do with the pattern, we need to add some keywo
 [TIP]
 .Are you struggling?
 If you need help with any of the information contained on this page, you can reach out to other members of our community.
-You can ask questions in the link:https://community.neo4j.com/c/neo4j-graph-platform/cypher/12?ref=guides[Cypher category on the Neo4j Community Site^].
+You can ask questions on the link:https://community.neo4j.com/c/neo4j-graph-platform/cypher/12?ref=guides[Neo4j Community Site^].
 
 [#recommendation-engine]
 == Tutorial: Build a Recommendation Engine
@@ -291,12 +299,11 @@ With Cypher structure and syntax covered in the sections above, you can dive int
 xref:guide-build-a-recommendation-engine.adoc[Tutorial: Build a Recommendation Engine,role=more information] walks through using queries and filtering that takes advantage of the relationships in a graph in order to lend insight into habits and hidden connections and provide valuable recommendations.
 
 [#cypher-resources]
-== Cypher resources
+== xref:cypher-intro/resources.adoc[Cypher resources]
 
 Find out where else you can learn Cypher or increase your depth of knowledge from experts and solutions.
 There are a variety of training opportunities, blogs, videos, and more for taking the next steps in your Cypher (and Neo4j) journey!
 
-xref:resources.adoc[Cypher Resources,role=more information]
 
 == link:https://graphacademy.neo4j.com/?ref=guides[Learn with GraphAcademy^]
 
